--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/bootstrap/dist/css/amelia.bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(scr='/bower_components/jquery/dist/jquery.min.js')
     script(scr='/bower_components/bootstrap/dist/js/bootstrap.min.js')
