--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,9 +3,30 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/bootstrap/amelia.bootstrap.css')
+    link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(scr='/bower_components/jquery/dist/jquery.min.js')
-    script(scr='/bower_components/bootstrap/dist/js/bootstrap.min.js')
   body
-    block content
+
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/') Loc8r
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main', aria-expanded="true")
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+
+    .container
+      block content
+
+      footer
+        .row
+          .col-xs-12
+            small &copy; Simon Holmes 2014
+
+    script(src='/bower_components/jquery/dist/jquery.min.js')
+    script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
