fixed view layout to use bower components

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/amelia.bootstrap.css')
+    link(rel='stylesheet', href='bootstrap/dist/css/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
 
@@ -28,5 +28,5 @@ html
           .col-xs-12
             small &copy; Simon Holmes 2014
 
-    script(src='/bower_components/jquery/dist/jquery.min.js')
-    script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
+    script(src='jquery/dist/jquery.min.js')
+    script(src='bootstrap/dist/js/bootstrap.min.js')
