--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,8 +3,8 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/bootstrap/dist/css/amelia.bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='bootstrap/amelia.bootstrap.css')
+    link(rel='stylesheet', href='stylesheets/style.css')
   body
 
     .navbar.navbar-default.navbar-fixed-top
