Adding the view templates

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -4,8 +4,8 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
     
-    link(rel='stylesheet', href='bower_components/bootswatch-dist/css/bootstrap.css')
-    link(rel='stylesheet', href='stylesheets/style.css')
+    link(rel='stylesheet', href='/bower_components/bootswatch-dist/css/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
 
     .navbar.navbar-default.navbar-fixed-top
@@ -29,5 +29,5 @@ html
           .col-xs-12
             small &copy; Simon Holmes 2014
 
-    script(src='bower_components/jquery/dist/jquery.min.js')
-    script(src='bower_components/bootswatch-dist/js/bootstrap.min.js')
+    script(src='/bower_components/jquery/dist/jquery.min.js')
+    script(src='/bower_components/bootswatch-dist/js/bootstrap.min.js')
