transfered data from views to the controller

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,11 +3,9 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    
     link(rel='stylesheet', href='/bower_components/bootswatch-dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
@@ -27,7 +25,7 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Simon Holmes 2014
+            small &copy; João Barreiros 2016
 
     script(src='/bower_components/jquery/dist/jquery.min.js')
     script(src='/bower_components/bootswatch-dist/js/bootstrap.min.js')
