--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -29,3 +29,4 @@ html
 
     script(src='/bower_components/jquery/dist/jquery.min.js')
     script(src='/bower_components/bootswatch-dist/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
