--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,10 +1,12 @@
 doctype html
-html
+html(ng-app="loc8rApp")
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
     link(rel='stylesheet', href='/bower_components/bootswatch-dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/bower_components/angular/angular.min.js')
+    script(src='/angular/loc8rApp.js')
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
@@ -26,7 +28,7 @@ html
         .row
           .col-xs-12
             small &copy; João Barreiros 2016
-
+    
     script(src='/bower_components/jquery/dist/jquery.min.js')
     script(src='/bower_components/bootswatch-dist/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
