--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -6,7 +6,8 @@ html(ng-app="loc8rApp")
     link(rel='stylesheet', href='/bower_components/bootswatch-dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/bower_components/angular/angular.min.js')
-    script(src='/angular/loc8rApp.js')
+    script(src='/bower_components/angular-route/angular-route.min.js')
+    script(src='/app.js')
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
@@ -22,7 +23,8 @@ html(ng-app="loc8rApp")
               a(href='/about/') About
 
     .container
-      block content
+      div(ng-view)
+        block content
 
       footer
         .row
