--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -7,7 +7,7 @@ block content
     .row
       .col-lg-6
         h1= pageHeader.title
-          small &nbsp;#{pageHeader.strapline}
+          small #{pageHeader.strapline}
   .row
     .col-xs-12.col-sm-8(ng-controller="locationListCtrl")
       label(for="filter") Filter results
